# Apple-Supply-Intelligence-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  docker-compose.yml  package.json  pnpm-lock.yaml  progress.txt  pyproject.toml  render.yaml  tasks.ps1  turbo.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  e2e.yml  ingest.yml  release.yml  retrain.yml  security.yml  smoke.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/asciip_api/: __init__.py  cache.py  errors.py  main.py  middleware.py  routers.py  schemas.py  services.py  smoke.py
apps/api/tests/: conftest.py  test_health.py  test_routes.py
apps/web/: Dockerfile  README.md  next.config.mjs  package.json  package.json.new  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/public/: robots.txt
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/commodities/: page.tsx
apps/web/src/app/events/: page.tsx
apps/web/src/app/macro/: page.tsx
apps/web/src/app/network/: page.tsx
apps/web/src/app/simulate/: page.tsx
apps/web/src/app/suppliers/: page.tsx
apps/web/src/app/valuation/: page.tsx
apps/web/src/components/charts/: Heatmap.tsx  Histogram.tsx  LineChart.tsx  NetworkGraph.tsx  Sparkline.tsx
apps/web/src/components/common/: ErrorBoundary.tsx  States.tsx
apps/web/src/components/layout/: Container.tsx  Footer.tsx  PageHero.tsx  PageShell.tsx  Reveal.test.tsx  Reveal.tsx  ScrollHint.tsx  Section.tsx  TopNav.tsx
apps/web/src/components/providers/: Providers.tsx
apps/web/src/components/ui/: Badge.test.tsx  Badge.tsx  Button.test.tsx  Button.tsx  DataTable.tsx  FeatureCard.tsx  FreshnessStrip.tsx  ImpactChain.tsx  SectionHeader.tsx  Skeleton.tsx  StatBlock.tsx
apps/web/src/lib/: api.ts  format.test.ts  format.ts  hooks.ts  types.ts  utils.test.ts  utils.ts
apps/web/src/test/: setup.ts
data/snapshots/: README.md  apple_supplier_pdf.parquet  apple_supplier_pdf.parquet.sha256  disruption_events_seed.parquet  disruption_events_seed.parquet.sha256  fred_commodity_prices.parquet  fred_commodity_prices.parquet.sha256  fred_fx.parquet  fred_fx.parquet.sha256  yfinance_aapl.parquet  yfinance_aapl.parquet.sha256
docs/: README.md  architecture.md  runbook.md
docs/adr/: ADR-001-duckdb-feature-store.md  ADR-002-offline-first.md
tests/: conftest.py
tests/meta/: test_requirement_coverage.py
