[project]
name = "asciip"
version = "0.1.0"
description = "Apple Supply Chain Impact Intelligence Platform — workspace root"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "ASCIIP Team" }]

# Workspace root has no direct runtime dependencies; each member declares its own.
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "hypothesis>=6.112.0",
  "httpx>=0.27.0",
  "pre-commit>=3.8.0",
  "types-requests",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "apps/api",
  "packages/shared",
  "packages/data_pipeline",
  "packages/ml_models",
]

[tool.uv.sources]
asciip-shared = { workspace = true }
asciip-data-pipeline = { workspace = true }
asciip-ml-models = { workspace = true }
asciip-api = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "apps/web", "**/.venv"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",              # isort
  "UP",             # pyupgrade
  "B",              # bugbear
  "SIM",            # simplify
  "RUF",
  "ASYNC",
  "S",              # bandit
  "N",              # pep8-naming
  "PT",             # pytest style
]
ignore = [
  "S101",  # assert used — fine in tests
  "S311",  # pseudo-random — numpy/random are fine here
  "B008",  # FastAPI Depends() in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802", "N806", "PT011"]
"**/tests/**" = ["S", "N802", "N806", "PT011"]
# ML code uses uppercase single-letter names (X, W, T, Y) per mathematical convention.
"packages/ml_models/**" = ["N803", "N806", "S110", "S112", "S608"]
# Data pipeline uses controlled internal SQL (no user input) and a trusted git subprocess.
"packages/data_pipeline/**" = ["S603", "S607", "S608"]
# API layer uses internal parameterised SQL and intentional try/except suppression.
"apps/api/**" = ["S608", "S110", "SIM105", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  "apps/api",
  "packages/shared",
  "packages/data_pipeline",
  "packages/ml_models",
]
exclude = ["^apps/web/", "^data/", "\\.venv/"]

[[tool.mypy.overrides]]
module = [
  "duckdb",
  "yfinance",
  "fredapi",
  "finnhub",
  "pypdf",
  "selectolax.*",
  "prophet",
  "lightgbm",
  "xgboost",
  "shap",
  "dowhy.*",
  "econml.*",
  "reportlab.*",
  "openpyxl.*",
  "apscheduler.*",
  "slowapi.*",
  "fastapi_cache.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests", "apps/api/tests", "packages"]
asyncio_mode = "auto"
markers = [
  "unit: fast isolated unit tests",
  "property: hypothesis property-based tests",
  "integration: spins up FastAPI + DuckDB",
  "e2e: end-to-end Playwright tests",
  "slow: tests that take more than 1s",
  "req_1: covers Requirement 1",
  "req_2: covers Requirement 2",
  "req_3: covers Requirement 3",
  "req_4: covers Requirement 4",
  "req_5: covers Requirement 5",
  "req_6: covers Requirement 6",
  "req_7: covers Requirement 7",
  "req_8: covers Requirement 8",
  "req_9: covers Requirement 9",
  "req_10: covers Requirement 10",
  "req_11: covers Requirement 11",
  "req_12: covers Requirement 12",
  "req_13: covers Requirement 13",
  "req_14: covers Requirement 14",
  "req_15: covers Requirement 15",
  "req_16: covers Requirement 16",
  "req_17: covers Requirement 17",
  "req_18: covers Requirement 18",
  "req_19: covers Requirement 19",
  "req_20: covers Requirement 20",
  "req_21: covers Requirement 21",
  "req_22: covers Requirement 22",
  "req_23: covers Requirement 23",
  "req_24: covers Requirement 24",
  "req_25: covers Requirement 25",
  "req_26: covers Requirement 26",
  "req_27: covers Requirement 27",
  "req_28: covers Requirement 28",
  "req_29: covers Requirement 29",
  "req_30: covers Requirement 30",
]

[tool.coverage.run]
branch = true
source = [
  "apps/api/asciip_api",
  "packages/shared/asciip_shared",
  "packages/data_pipeline/asciip_data_pipeline",
  "packages/ml_models/asciip_ml_models",
]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
