[project]
name = "asciip-api"
version = "0.1.0"
description = "ASCIIP — FastAPI backend (Layers 5–6)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
dependencies = [
  "asciip-shared",
  "asciip-data-pipeline",
  "asciip-ml-models",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.5.0",
  "orjson>=3.10.7",
  "httpx>=0.27.0",
  "slowapi>=0.1.9",
  "fastapi-cache2>=0.2.2",
  "reportlab>=4.2.2",
  "openpyxl>=3.1.5",
  "sse-starlette>=2.1.3",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asciip_api"]
